# pixyz-scheduler

./: CONTRIBUTING.md  LICENSE.md  README.md  api.py  catalog-info.yaml  celery_admin.py  client.py  compose.yaml  flower.py  mkdocs.yml  pixyz-scheduler.conf.example  worker.py
.github/: CODEOWNERS
.github/workflows/: validate_catalog.yaml
docs/: README.md  api_client.md  api_doc.md  docker-setup.md  docker_custom.md  index.md  kubernetes_install.md  local_install.md  multi_install.md  ps_admin.md  ps_developer.md  ps_setup.md  ps_user.md  test_install.md  tutorial.md
docs/files/: keda-values.yaml  redis-values.yaml
helm/: README.md
helm/charts/pixyz-scheduler/: Chart.yaml  values.yaml
helm/charts/pixyz-scheduler/templates/: NOTES.txt  _helpers.tpl  api.yaml  flowers.yaml  worker.yaml
pixyz_api/: Dockerfile  README.md  __init__.py  auth.py  config.py  models.py  patterns.py  pyproject.toml  requirements.txt  routes.py  utils.py
pixyz_api/admin/: __init__.py  endpoints.py
pixyz_api/backend/: __init__.py  endpoints.py
pixyz_api/jobs/: endpoints.py
pixyz_api/process/: api_test.py  convert_file.py  generate_metadata.py  generate_thumbnails.py  sleep.py  thumbnail_chained.py
pixyz_api/processes/: __init__.py  endpoints.py
pixyz_scheduler/: README.md  pyproject.toml  requirements.txt
pixyz_worker/: Dockerfile  LICENSE.md  __init__.py  backend.py  config.py  entrypoint.sh  exception.py  extcode.py  license.py  local.py  pc.py  progress.py  pyproject.toml  requirements.txt  script.py  settings.py  share.py  signals.py  stop.py  storage.py  tasks.py  utils.py  watchdog.py
scripts/tutorial/: 00_convert_a_file.py  00_progress.py  00_sleep.py  01_workflow_engine.py  02_celery_dag_async.py  02_celery_dag_sync.py  03_group_async.py  04_chain_async.py  05_chain_cpu_gpu_async.py  05_chain_cpu_gpu_sync.py  06_chain_cpu_cpu_gpu_test.py  06_chain_wine_cpu_gpu.py  06_chain_wine_cpu_gpu_async.py  README.md  parallel_process.py
